Closed
Bug 450991
Opened 17 years ago
Closed 17 years ago
Number in "Order Received" column becomes negative, when mail's offset in local mail folder file exceeds 2GB
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 3.0b1
People
(Reporter: World, Assigned: hiro)
References
Details
(Keywords: fixed1.8.1.18)
Attachments
(3 files)
|
40.12 KB,
image/png
|
Details | |
|
806 bytes,
patch
|
Bienvenu
:
review+
neil
:
superreview+
dveditz
:
approval1.8.1.18+
|
Details | Diff | Splinter Review |
|
574 bytes,
patch
|
Bienvenu
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
> [App] Name=Thunderbird, Version=3.0b1pre, BuildID=20080814031842
> ID={3550f703-e582-4d05-9a08-453d09bdfdc6}
> [Gecko] MinVersion=1.9.1a2pre, MaxVersion=1.9.1a2pre
> On MS Win-XP SP3
Number in "Order Received" column becomes negative, when mail's offset in local mail folder file exceeds 2GB.
Sort order is proper(sorted by value of 32bit unsigned integer). So it looks to be display only issue(treated as 32bit signed integer). Possibly due to common module for Win,Linux,Mac OS. (Mail folder file greater then 2GB is supported by NSPR for Win only)
Note:
This bug's problem is minor. But critical issues such as Bug 450359 really exist, due to insuffient changes after support of mail folder file greater than 2GB.
| Assignee | ||
Comment 1•17 years ago
|
||
support 4GB over mailbox.
Attachment #334367 -
Flags: review?(bienvenu)
| Assignee | ||
Comment 2•17 years ago
|
||
Attachment #334372 -
Flags: review?(bienvenu)
Comment 3•17 years ago
|
||
Comment on attachment 334372 [details] [diff] [review]
Same patch for trunk
[Checkin: Comment 5]
thx for the patch
Attachment #334372 -
Flags: review?(bienvenu) → review+
Comment 4•17 years ago
|
||
Comment on attachment 334367 [details] [diff] [review]
Workaround patch for 1.8 branch
thx for the patch
Attachment #334367 -
Flags: superreview?(neil)
Attachment #334367 -
Flags: review?(bienvenu)
Attachment #334367 -
Flags: review+
Updated•17 years ago
|
Attachment #334372 -
Flags: superreview?(neil)
Updated•17 years ago
|
Attachment #334367 -
Flags: superreview?(neil) → superreview+
Updated•17 years ago
|
Attachment #334372 -
Flags: superreview?(neil) → superreview+
Updated•17 years ago
|
Assignee: nobody → poincare
Status: NEW → ASSIGNED
Component: Mail Window Front End → Backend
Keywords: checkin-needed
OS: Windows XP → All
Product: Thunderbird → MailNews Core
QA Contact: front-end → backend
Hardware: PC → All
Target Milestone: --- → Thunderbird 3.0b1
Updated•17 years ago
|
Whiteboard: [Why 2 patches.?.]
| Assignee | ||
Updated•17 years ago
|
Attachment #334367 -
Attachment description: Workaround patch → Workaround patch for 1.8 branch
| Assignee | ||
Updated•17 years ago
|
Whiteboard: [Why 2 patches.?.] → [Th first one is for 1.8 branch, another one is for trunk]
Comment 5•17 years ago
|
||
Comment on attachment 334372 [details] [diff] [review]
Same patch for trunk
[Checkin: Comment 5]
http://hg.mozilla.org/comm-central/rev/bab601fb4812
Attachment #334372 -
Attachment description: Same patch for trunk. → Same patch for trunk
[Checkin: Comment 5]
Comment 6•17 years ago
|
||
I think you need to get some kind of additional approval before branch checkin.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [Th first one is for 1.8 branch, another one is for trunk] → [c-n: 1.8.1 branch]
| Assignee | ||
Updated•17 years ago
|
Attachment #334367 -
Flags: approval1.8.1.18?
Comment 7•17 years ago
|
||
I don't know if it is related, but I cannot unfold any thread in mailnews or click on the top list message without getting a crash.
Comment 8•17 years ago
|
||
Please add checkin-needed back once this has got approval.
Someone also needs to confirm whether or not comment 7 is a regression from this.
Keywords: checkin-needed
Comment 9•17 years ago
|
||
Frederic: probably best to file a followup bug. But anyway, can you give the breakpad crash id? Is the folder in question over 2GB?
Comment 10•17 years ago
|
||
Comment on attachment 334367 [details] [diff] [review]
Workaround patch for 1.8 branch
a=dmose; however, bugzilla doesn't seem to think I have authority to set approval1.8.1.18+ for some reason.
Updated•17 years ago
|
Attachment #334367 -
Flags: approval1.8.1.18? → approval1.8.1.18+
Comment 11•17 years ago
|
||
Magnus : I target wrong bug as guilty for my crashes. It was bug 460058 here. Sorry for my mistake :/
Comment 12•17 years ago
|
||
fix checked into the 1.8 branch
Keywords: fixed1.8.1.18
Whiteboard: [c-n: 1.8.1 branch]
You need to log in
before you can comment on or make changes to this bug.
Description
•