Bug 450991 - Number in "Order Received" column becomes negative, when mail's offset in local mail folder file exceeds 2GB; r=bienvenu sr=neil